update full api diaries/search